--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@
 
 .flex{
     display:flex;
-  
 }
 
 .text{
@@ -26,10 +25,19 @@
     outline: none;
     background: #e9edff;
     padding: 10px 15px;
-    width: 80%;
+    width: 70%;
     border-radius: 10px 0 0 10px;
     margin-right: 0;
 
+}
+
+.numbers{
+    border: none;
+    outline: none;
+    background: #e9edff;
+    padding: 10px 15px;
+    width: 10%;
+    margin-right: 0;
 }
 
 
